# Trade

./: CMakeLists.txt  TRADING_BOT_NOTES.md
core/: OrderManager.h  TradeEngine.h
include/tradebot/infrastructure/: PluginLoader.h
include/tradebot/interfaces/: IExchangeApi.h  IStrategy.h
include/tradebot/models/: MarketData.h  Order.h  Trade.h
infrastructure/: ExchangeApi.h  Logger.cpp  Logger.h
plugins/DummyStrategy/: CMakeLists.txt  DummyStrategy.cpp
scripts/: build.sh  clean.sh  run.sh
src/: PluginLoader.cpp  main.cpp
